--- a/ProjectV3/src/app/view-products/view-products.component.css
+++ b/ProjectV3/src/app/view-products/view-products.component.css
@@ -5,10 +5,9 @@
 }
 #prod_img{
   max-width: 100%;
-
-  max-height: 100%;
+  max-height: 70%;
   min-width: 100%;
-  min-height: 100%;
+  min-height: 70%;
 }
 /* DashboardComponent's private CSS styles */
 [class*='col-'] {
@@ -16,15 +15,12 @@
   padding-right: 20px;
   padding-bottom: 20px;
 }
-a {
-  text-decoration: none;
-  color: #eee;
-}
 [class*='col-']:last-of-type {
   padding-right: 0;
 }
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
@@ -48,8 +44,10 @@ h4 {
   padding: 20px;
   text-align: center;
   color: #eee;
+  height: 100%;
   max-height: 100%;
   min-width: 100%;
+  min-height: 100%;
   border-radius: 2px;
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -76,3 +74,4 @@ h4 {
     min-width: 100%;
   }
 }
+
