--- a/ProjectV3/src/app/view-products/view-products.component.html
+++ b/ProjectV3/src/app/view-products/view-products.component.html
@@ -1,17 +1,11 @@
-<div class="grid-pad" *ngIf="products">
-
-  <div class="col-1-4" *ngFor="let product of products">
-
+<div class="grid-pad">
+  <a *ngFor="let product of products" class="col-1-4" routerLink="/products/{{product.id}}">
     <div class="module hero">
-      <a routerLink="/products/{{product.id}}">
-        <h3> {{product.name}} </h3>
-        <img id="prod_img" src="{{product.img}}">
+      <h4>{{product.name}}</h4>
 
-        <h4> {{product.description}} </h4>
-      </a>
-
+      <img id="prod_img" src="{{product.img}}" alt="ProdImage">
+      <h4> {{product.description}} </h4>
     </div>
-
-  </div>
-
+  </a>
 </div>
+
