--- a/ProjectV3/src/app/for-all-categories/for-all-categories.component.css
+++ b/ProjectV3/src/app/for-all-categories/for-all-categories.component.css
@@ -1,3 +1,12 @@
+#title{
+  text-align: center;
+  width: 100%;
+}
+#title h2{
+  font-size: 3em;
+  font-family: "Times New Roman";
+  font-style: normal;
+}
 .grid-pad{
   display: flex;
   flex-direction: row;
