--- a/ProjectV3/src/styles.css
+++ b/ProjectV3/src/styles.css
@@ -1,14 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
-
 body{
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background-image: url('assets/img_girl.jpg');
-  /*height: 100%;*/
+  /*background-image: url();*/
+  height: 100%;
   min-height: 100%;
   max-height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin: 0;
 }
