--- a/ProjectV3/src/app/view-product/view-product.component.html
+++ b/ProjectV3/src/app/view-product/view-product.component.html
@@ -1,3 +1,5 @@
+<app-logged-status></app-logged-status>
+
 <div *ngIf="product">
   <div id="main">
 
@@ -60,5 +62,3 @@
 <div *ngIf="!product">
   <h1>No Product</h1>
 </div>
-
-<app-downbar></app-downbar>
