--- a/ProjectV3/src/app/bottom-navigation/bottom-navigation.component.css
+++ b/ProjectV3/src/app/bottom-navigation/bottom-navigation.component.css
@@ -1,3 +1,8 @@
+.body{
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+}
 #page{
   margin-top: 10em;
   margin-left: 13em;
@@ -29,4 +34,12 @@ ul.leanguage li{
   margin-top: 7px;
   margin-left: 11em;
 }
-
+.bottomMain{
+  color: #eeeeee;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.bottomMain div{
+  width: 30%;
+}
