--- a/ProjectV3/src/app/for-all-categories/for-all-categories.component.html
+++ b/ProjectV3/src/app/for-all-categories/for-all-categories.component.html
@@ -1,3 +1,4 @@
+<app-logged-status></app-logged-status>
 <div id="title">
   <h2>Top 20 all time products</h2>
 </div>
@@ -14,5 +15,4 @@
     </div>
   </a>
 </div>
-<app-bottombar></app-bottombar>
-<app-downbar></app-downbar>
+<app-advice-menu></app-advice-menu>
