--- a/ProjectV3/src/app/for-man-categories/for-man-categories.component.html
+++ b/ProjectV3/src/app/for-man-categories/for-man-categories.component.html
@@ -1,14 +1,16 @@
-<div class="grid-pad">
-  <a *ngFor="let product of products" class="col-1-4" routerLink="/products/{{product.id}}">
-    <div class="module hero">
-      <h4>{{product.name}}</h4>
+  <app-logged-status></app-logged-status>
+  <div class="grid-pad">
+    <a *ngFor="let product of products" class="col-1-4" routerLink="/products/{{product.id}}">
+      <div class="module hero">
+        <h4>{{product.name}}</h4>
 
-      <img id="prod_img" src="{{product.img}}" alt="ProdImage">
+        <img id="prod_img" src="{{product.img}}" alt="ProdImage">
 
-      <p>Price : {{product.price}} T</p>
+        <p>Price : {{product.price}} T</p>
 
-      <p>Rating : {{product.rating}}</p>
-    </div>
-  </a>
-</div>
-<app-downbar></app-downbar>
+        <p>Rating : {{product.rating}}</p>
+      </div>
+    </a>
+  </div>
+
+
