--- a/ProjectV3/src/app/view-product/view-product.component.css
+++ b/ProjectV3/src/app/view-product/view-product.component.css
@@ -1,11 +1,12 @@
+
 #main{
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
   min-height: 100%;
   max-height: 100%;
-  font-family: Arial;
 }
 #main div{
   margin: 5px;
@@ -151,5 +152,10 @@
   border: 1px solid rgba(255,255,255,.1);
   padding: 0 15px;
   border-radius: 2px;
+  color: black;
+}
+app-logged-status{
+  float: right;
+  font-size: 2em;
   color: black;
 }
