--- a/ProjectV3/src/styles.css
+++ b/ProjectV3/src/styles.css
@@ -2,12 +2,11 @@ body{
   display: flex;
   justify-content: center;
   flex-direction: column;
-  /*background-image: url();*/
+  background-image: url('assets/img_girl.jpg');
   height: 100%;
   min-height: 100%;
   max-height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin: 0;
 }
