--- a/ProjectV3/src/app/product-edit/product-edit.component.html
+++ b/ProjectV3/src/app/product-edit/product-edit.component.html
@@ -1,28 +1,27 @@
-<p>product-edit works!</p>
-<div *ngIf="product">
-  {{product.name}}
-  <h1> If you wanna change name</h1>
-  <label>
-    <input [(ngModel)]="product.name" placeholder="name"/>
-  </label>
+<app-logged-status></app-logged-status>
 
-  <div>
-  {{product.description}}
-  <h1> If you wanna change description</h1>
-  <label>
-    <input size='100'[(ngModel)]="product.description" placeholder="description"/>
-  </label>
-</div>
-  <div>
-    {{product.price}}
-    <h1> If you wanna change price</h1>
-    <label>
-      <input [(ngModel)]="product.price" placeholder="description"/>
-    </label>
+<div class="main" *ngIf="product">
+
+  <div class="title">
+    <h2>Here you can edit this Product</h2>
   </div>
+  <div class="prodName">
+      <input class="inputModel" [(ngModel)]="product.name" placeholder="name"/>
+  </div>
+
+  <div class="prodDescription">
+    <input class="inputModel" (click)="edit('description')" class="inputModel" [(ngModel)]="product.description" placeholder="description" />
+  </div>
+
+  <div class="prodPrice">
+    <input class="inputModel" (click)="edit('price')" class="inputModel" [(ngModel)]="product.price" placeholder="description" />
+  </div>
+
+  <div class="buttons">
+    <button class="button" (click)="goBack()">go back</button>
+    <button class="button" (click)="save()">save</button>
+  </div>
+
 </div>
 
-<div>
-  <button (click)="goBack()">go back</button>
-  <button (click)="save()">save</button>
-</div>
+
