--- a/ProjectV3/src/app/for-all-categories/for-all-categories.component.html
+++ b/ProjectV3/src/app/for-all-categories/for-all-categories.component.html
@@ -1,18 +1,21 @@
 <app-logged-status></app-logged-status>
-<div id="title">
-  <h2>Top 20 all time products</h2>
+<div>
+  <div id="title">
+    <h2>Top 20 all time products</h2>
+  </div>
+  <div class="grid-pad">
+    <h1 *ngIf="!products">Loading . . . </h1>
+    <a *ngFor="let product of products" class="col-1-4" routerLink="/products/{{product.id}}">
+      <div class="module hero">
+        <h4>{{product.name}}</h4>
+
+        <img id="prod_img" src="{{product.img}}" alt="ProdImage">
+
+        <p>Price : {{product.price}} T</p>
+
+        <p>Rating : {{product.rating}}</p>
+      </div>
+    </a>
+  </div>
+  <app-advice-menu></app-advice-menu>
 </div>
-<div class="grid-pad">
-  <a *ngFor="let product of products" class="col-1-4" routerLink="/products/{{product.id}}">
-    <div class="module hero">
-      <h4>{{product.name}}</h4>
-
-      <img id="prod_img" src="{{product.img}}" alt="ProdImage">
-
-      <p>Price : {{product.price}} T</p>
-
-      <p>Rating : {{product.rating}}</p>
-    </div>
-  </a>
-</div>
-<app-advice-menu></app-advice-menu>
