--- a/ProjectV3/src/app/logged-status/logged-status.component.html
+++ b/ProjectV3/src/app/logged-status/logged-status.component.html
@@ -1,1 +1,7 @@
-<p *ngIf="activeUser">Welcome <a routerLink="/profile">{{activeUser.login}} </a> !</p>
+<p *ngIf="activeUser" class="text">Welcome
+  <a id="profile" routerLink="/profile">{{activeUser.login}} </a>
+  ! |
+  <a *ngIf="admin" routerLink="/admin"> Go to Admin Page |</a>
+  <a *ngIf="admin" routerLink="/forall"> Go to Products Page |</a>
+  <a id="logOut" (click)="logOut()"> LogOut </a>
+</p>
